# Simple-Spreadsheet-in-Cpp

./: CMakeLists.txt  LICENSE  LICENSE.txt  main.cpp
src/: Spreadsheet.cpp  Spreadsheet.h  SpreadsheetAllCellsDefinitions.h  SpreadsheetAvgCell.cpp  SpreadsheetAvgCell.h  SpreadsheetCell.cpp  SpreadsheetCell.h  SpreadsheetCellCoordinates.cpp  SpreadsheetCellCoordinates.h  SpreadsheetController.cpp  SpreadsheetController.h  SpreadsheetEmptyCell.cpp  SpreadsheetEmptyCell.h  SpreadsheetFunctionCell.cpp  SpreadsheetFunctionCell.h  SpreadsheetMaxCell.cpp  SpreadsheetMaxCell.h  SpreadsheetMinCell.cpp  SpreadsheetMinCell.h  SpreadsheetNotEmptyCell.cpp  SpreadsheetNotEmptyCell.h  SpreadsheetNumericCell.cpp  SpreadsheetNumericCell.h  SpreadsheetNumericFunctionCell.cpp  SpreadsheetNumericFunctionCell.h  SpreadsheetRawNumericCell.cpp  SpreadsheetRawNumericCell.h  SpreadsheetRawTextualCell.cpp  SpreadsheetRawTextualCell.h  SpreadsheetSumCell.cpp  SpreadsheetSumCell.h  SpreadsheetView.cpp  SpreadsheetView.h  View.h
src/utility/: Latch.cpp  Latch.h  Observer.h  Subject.h
unit_test/: CMakeLists.txt  SpreadsheetCellCoordinatesTests.cpp  SpreadsheetEmptyCellTests.cpp  SpreadsheetRawNumericCellTests.cpp  SpreadsheetRawTextualCell.cpp  SpreadsheetSumCellTests.cpp  SpreadsheetTests.cpp
